# Agent

./: .env  .gitignore  Dockerfile  Dockerfile.bak1  README.md  Untitled1.ipynb  app.py  hx.html  main.py  pyproject.toml  pyrightconfig.json  requirements.txt  setup.py  stock_HK2018_20250721.json  stock_news_601318.txt  stock_signal_records.json  testp.py  thx.py  util.py  zhitu.py  zhitu_fastapi.py
cache/: cache_F7A19AE8-38E9-4F94-B189-6A9A161658D8.json
html_output/: stock_page_HK2018_20250721_235450.html
ipynb/:  股票分时数据.ipynb  Untitled.ipynb  Untitled1.ipynb  ta-lib.ipynb  个股新闻.ipynb  获取股票信息.ipynb
src/: ana.py  app.py  call_dify.py  indicators.py  ta.py  test.html  thx.py  thx_helper.py  ticker.py  tt.py  util.py  zhitu.py  zhitu_fastapi.py
src/scripts/: app.py  deep_chek.py  start_mcp.py  testp.py
src/st/: stock.py  tt.py  web.py
src/thx/: deep.py  thx_helper.py  thx_tool.py
src/tool/: util.py
src/zhitu/: zhitu.py  zhitu_fastapi.py
src/zhitu/cache/: cache_F7A19AE8-38E9-4F94-B189-6A9A161658D8.json
