[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}  # 将包放在 src 目录下

[tool.setuptools.packages.find]
where = ["src"]  # 在 src 目录中查找包
include = ["mypackage*"]  # 包含的包模式
exclude = ["mypackage.tests*"]  # 排除的包模式


[project]
name = "stock_tool"
version = "0.1.0"
description = "An awesome Python package"
authors = [
    { name = "Your Name", email = "you@example.com" },
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

# 项目依赖
dependencies = [
    "requests>=2.25.1",
    "numpy>=1.20.0",
]

# 可选依赖组
[project.optional-dependencies]
dev = ["pytest>=7.0", "black>=22.0"]
test = ["coverage", "pytest-cov"]
docs = ["sphinx", "furo"]


# 入口点（CLI命令）
[project.scripts]
mycli = "mypackage.cli:main"

# 工具配置
[tool.black]
line-length = 88
target-version = ["py38"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = ["tests"]

[tool.mypy]
strict = true
ignore_missing_imports = true

[tool.coverage.run]
source = ["mypackage"]